--- a/wiki_recipenew/src/App.css
+++ b/wiki_recipenew/src/App.css
@@ -2,6 +2,15 @@
   text-align: center;
 }
 
+.main {
+  min-height: 85.5vh;
+  width: 100%;
+  display: flex;
+}
+
+.content {
+  margin: 0 auto;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
