--- a/wiki_recipenew/src/Components/SideNav/SideNav.scss
+++ b/wiki_recipenew/src/Components/SideNav/SideNav.scss
@@ -1,18 +1,10 @@
-// /* The sidebar menu */
-// .sidenav {
-//     height: 100%; /* Full-height: remove this if you want "auto" height */
-//     width: 80px; /* Set the width of the sidebar */
-//     position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-//     z-index: 1; /* Stay on top */
-//     top: 100; /* Stay at the top */
-//     left: 0;
-//     color: white;
-//     background-color: gray; /* Black */
-//     overflow-x: hidden; /* Disable horizontal scroll */
-//     padding-top: 20px;
-//     text-align: center;
+/* The sidebar menu */
+.sidenav {
+  height: 100%;
+  width: 160px;
 
-
-//   }
-  
- 
+  background-color: gray;
+  overflow-y: hidden;
+  padding-top: 20px;
+  text-align: center;
+}
