--- a/wiki_recipenew/src/Components/SideNav/SideNav.scss
+++ b/wiki_recipenew/src/Components/SideNav/SideNav.scss
@@ -1,8 +1,7 @@
-/* The sidebar menu */
 .sidenav {
   height: 100%;
   width: 160px;
-
+  box-shadow: inset -2px 0 2px #0000001c;
   background-color: gray;
   overflow-y: hidden;
   padding-top: 20px;
