--- a/wiki_recipenew/src/Components/Home/Home.scss
+++ b/wiki_recipenew/src/Components/Home/Home.scss
@@ -1,9 +1,13 @@
 .Jumbo {
+  h1 {
+    margin-top: 80px;
+    color: white;
+  }
   background-image: url('https://images.creativemarket.com/0.1.0/ps/3379856/1360/906/m1/fpnw/wm1/pfhgxchmb2ttmklouoabchtigsyma36lawo3w97ycjnyahr5vku9hequuk1beweg-.jpg?1507495665&s=7b15527692314d3fc3a11d94a8c69a80');
   background-size: 700px;
   background-repeat: no-repeat;
-  margin-top: 70px;
-  height: 300px;
+  margin-top: 25px;
+  height: 400px;
 
   .btn {
     margin-top: 100px;
