--- a/wiki_recipenew/src/Components/Navigation/Navigation.scss
+++ b/wiki_recipenew/src/Components/Navigation/Navigation.scss
@@ -1,23 +1,25 @@
 .nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  
-    background-color: rgb(91, 161, 24);
-    color: white;
-    padding: 20px;
-    .logo {
-      font-size: 25px;
-      font-weight: 400;
-      margin-left: 20px;
-    }
-  
-    .navLinks {
-      .link {
-        text-decoration: none;
-        margin-left: 10px;
-        color: white;
-      }
+  display: flex;
+  position: sticky;
+  top: 0;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(91, 161, 24);
+  color: white;
+  padding: 20px;
+  height: 15vh;
+  box-shadow: inset 0 -2px 2px #59773c94;
+  .logo {
+    font-size: 25px;
+    font-weight: 400;
+    margin-left: 20px;
+  }
+
+  .navLinks {
+    .link {
+      text-decoration: none;
+      margin-left: 10px;
+      color: white;
     }
   }
-  
+}
