added css and cleaned extra codes

--- a/wiki_recipenew/src/App.css
+++ b/wiki_recipenew/src/App.css
@@ -10,8 +10,9 @@
 }
 
 .content {
-  padding: 10px;
-  margin: 0 auto;
+  padding: 30px;
+  width: 85vw;
+  background-color: rgb(236, 236, 236);
 }
 .App-logo {
   height: 40vmin;
