--- a/wiki_recipenew/src/Components/Navigation/Navigation.scss
+++ b/wiki_recipenew/src/Components/Navigation/Navigation.scss
@@ -4,12 +4,13 @@
   top: 0;
   justify-content: space-between;
   align-items: center;
-  background-color: rgb(91, 161, 24);
+  background-color: rgb(121, 195, 52);
   color: white;
   padding: 20px;
   height: 15vh;
   box-shadow: inset 0 -2px 2px #59773c94;
   .logo {
+    color: black;
     font-size: 25px;
     font-weight: 400;
     margin-left: 20px;
@@ -17,9 +18,11 @@
 
   .navLinks {
     .link {
+      font-size: 25px;
+      font-weight: 400;
       text-decoration: none;
       margin-left: 10px;
-      color: white;
+      color: black;
     }
   }
 }
