fixed sidenav and some css

--- a/wiki_recipenew/src/Components/Navigation/Navigation.scss
+++ b/wiki_recipenew/src/Components/Navigation/Navigation.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+
 .nav {
   display: flex;
   position: sticky;
@@ -6,23 +8,30 @@
   align-items: center;
   background-color: rgb(121, 195, 52);
   color: white;
-  padding: 20px;
   height: 15vh;
   box-shadow: inset 0 -2px 2px #59773c94;
-  .logo {
-    color: black;
-    font-size: 25px;
-    font-weight: 400;
-    margin-left: 20px;
-  }
 
+  .navHeader {
+    color: black;
+    font-size: 30px;
+    font-weight: 400;
+    margin-left: 220px;
+    font-family: 'Staatliches', cursive;
+  }
   .navLinks {
     .link {
-      font-size: 25px;
+      font-size: 18px;
       font-weight: 400;
       text-decoration: none;
       margin-left: 10px;
+      margin-right: 15px;
       color: black;
     }
   }
+}
+.logo {
+  color: white;
+  font-size: 60px;
+  margin-left: 40px;
+  margin-bottom: 15px;
 }
