--- a/wiki_recipenew/src/App.css
+++ b/wiki_recipenew/src/App.css
@@ -1,3 +1,11 @@
+body {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+::-webkit-scrollbar {
+  display: none;
+}
+
 .App {
   text-align: center;
 }
@@ -10,10 +18,16 @@
 }
 
 .content {
+  height: 85vh;
+  overflow-y: auto;
   padding: 30px;
   width: 85vw;
   background-color: rgb(236, 236, 236);
 }
+.content img {
+  margin: 40px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
