--- a/wiki_recipenew/src/Components/SideNav/SideNav.scss
+++ b/wiki_recipenew/src/Components/SideNav/SideNav.scss
@@ -1,9 +1,9 @@
 .sidenav {
-  height: auto;
+  height: 85vh;
   width: 20vw;
   box-shadow: inset -2px 0 2px #0000001c;
   background-color: gray;
-  overflow-y: hidden;
+  overflow-y: auto;
   padding-top: 20px;
   text-align: center;
 
