--- a/wiki_recipenew/src/Components/Navigation/Navigation.scss
+++ b/wiki_recipenew/src/Components/Navigation/Navigation.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
 .nav {
   display: flex;
@@ -6,32 +7,47 @@
   top: 0;
   justify-content: space-between;
   align-items: center;
-  background-color: rgb(121, 195, 52);
+  background: url('https://www.wallpaperbetter.com/wallpaper/261/338/440/baroque-floral-1080P-wallpaper.jpg');
+  background-position: left;
+  background-size: 1200px;
+ 
+
+
+
+
   color: white;
-  height: 15vh;
-  box-shadow: inset 0 -2px 2px #59773c94;
+
+  height: 10vh;
+ 
 
   .navHeader {
-    color: black;
+    color:#ffff;
     font-size: 30px;
     font-weight: 400;
     margin-left: 220px;
-    font-family: 'Staatliches', cursive;
+    font-family: 'Anton', sans-serif;
+    -webkit-text-stroke: 1px #7f6542;
   }
   .navLinks {
     .link {
-      font-size: 18px;
-      font-weight: 400;
+      font-family: 'Anton', sans-serif;
+      font-size: 20px;
+      font-weight: 600;
       text-decoration: none;
       margin-left: 10px;
       margin-right: 15px;
-      color: black;
+      color: #ffff;
+      -webkit-text-stroke: 1px  #7f6542;
+      
     }
   }
 }
-.logo {
-  color: white;
-  font-size: 60px;
-  margin-left: 40px;
-  margin-bottom: 15px;
+#logo{
+  color: #7f6542;
 }
+// .logo {
+//   color: white;
+//   font-size: 30px;
+//   margin-left: 40px;
+//   margin-bottom: 15px;
+// }
