--- a/wiki_recipenew/src/Components/Navigation/Navigation.scss
+++ b/wiki_recipenew/src/Components/Navigation/Navigation.scss
@@ -10,6 +10,7 @@
   background: url('https://www.wallpaperbetter.com/wallpaper/261/338/440/baroque-floral-1080P-wallpaper.jpg');
   background-position: left;
   background-size: 1200px;
+
  
 
 
@@ -31,19 +32,26 @@
   .navLinks {
     .link {
       font-family: 'Anton', sans-serif;
-      font-size: 20px;
+      font-size: 30px;
       font-weight: 600;
       text-decoration: none;
       margin-left: 10px;
       margin-right: 15px;
-      color: #ffff;
+      color:#ffff;
       -webkit-text-stroke: 1px  #7f6542;
+      
       
     }
   }
 }
 #logo{
-  color: #7f6542;
+  color:
+  #847b52;
+  font-size: 30px;
+  padding: 0 5px;
+  background-color:#f0cc6a;
+  border-radius: 2px;
+ 
 }
 // .logo {
 //   color: white;
