--- a/wiki_recipenew/src/Components/SideNav/SideNav.scss
+++ b/wiki_recipenew/src/Components/SideNav/SideNav.scss
@@ -9,7 +9,7 @@
   background-color:#d39b54;
   overflow-y: auto;
   padding-top: 20px;
-  text-align: left;
+  text-align: center;
 
   .link {
     color:#766845;
