added css and adjusted height and width of nav and sidebar

--- a/wiki_recipenew/src/Components/Navigation/Navigation.scss
+++ b/wiki_recipenew/src/Components/Navigation/Navigation.scss
@@ -9,21 +9,13 @@
   align-items: center;
   background: url('https://www.wallpaperbetter.com/wallpaper/261/338/440/baroque-floral-1080P-wallpaper.jpg');
   background-position: left;
-  background-size: 1200px;
-
- 
-
-
-
-
+  background-size: 1300px;
   color: white;
-
-  height: 10vh;
- 
+  height: 15vh;
 
   .navHeader {
-    color:#ffff;
-    font-size: 30px;
+    color: #ffff;
+    font-size: 50px;
     font-weight: 400;
     margin-left: 220px;
     font-family: 'Anton', sans-serif;
@@ -37,21 +29,17 @@
       text-decoration: none;
       margin-left: 10px;
       margin-right: 15px;
-      color:#ffff;
-      -webkit-text-stroke: 1px  #7f6542;
-      
-      
+      color: #ffff;
+      -webkit-text-stroke: 1px #7f6542;
     }
   }
 }
-#logo{
-  color:
-  #847b52;
+#logo {
+  color: #847b52;
   font-size: 30px;
   padding: 0 5px;
-  background-color:#f0cc6a;
+  background-color: #f0cc6a;
   border-radius: 2px;
- 
 }
 // .logo {
 //   color: white;
