--- a/wiki_recipenew/src/Components/Home/Home.scss
+++ b/wiki_recipenew/src/Components/Home/Home.scss
@@ -11,7 +11,7 @@
   background-size: 900px;
   background-repeat: no-repeat;
   margin-top: 25px;
-  margin: auto;
+  margin-left: 50px;
   height: 400px;
 
   .btn {
