--- a/wiki_recipenew/src/Components/Home/Home.scss
+++ b/wiki_recipenew/src/Components/Home/Home.scss
@@ -18,3 +18,14 @@
     margin-top: 100px;
   }
 }
+
+@media screen and (max-width: 600px) {
+  .Jumbo {
+    background-image: url('https://images.creativemarket.com/0.1.0/ps/3379856/1360/906/m1/fpnw/wm1/pfhgxchmb2ttmklouoabchtigsyma36lawo3w97ycjnyahr5vku9hequuk1beweg-.jpg?1507495665&s=7b15527692314d3fc3a11d94a8c69a80');
+    background-size: 900px;
+    background-repeat: no-repeat;
+    margin-top: 25px;
+    margin-left: 50px;
+    height: 600px;
+  }
+}
