--- a/wiki_recipenew/src/Components/Navigation/Navigation.scss
+++ b/wiki_recipenew/src/Components/Navigation/Navigation.scss
@@ -41,9 +41,33 @@
   background-color: #f0cc6a;
   border-radius: 2px;
 }
-// .logo {
-//   color: white;
-//   font-size: 30px;
-//   margin-left: 40px;
-//   margin-bottom: 15px;
-// }
+
+@media screen and (max-width: 600px) {
+  .nav .navLinks .link {
+    font-family: 'Anton', sans-serif;
+    font-size: 20px;
+    text-decoration: none;
+    margin: auto;
+    color: #ffff;
+    -webkit-text-stroke: 1px #7f6542;
+  }
+  #logo {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .nav .navHeader {
+    color: #ffff;
+    font-size: 20px;
+    margin: auto;
+    font-family: 'Anton', sans-serif;
+    -webkit-text-stroke: 1px #7f6542;
+  }
+  .content {
+    padding: 0px;
+  }
+  .Jumbo {
+    margin: auto;
+  }
+}
